--- a/src/app/aaacesa/admin-user/admin-user.component.html
+++ b/src/app/aaacesa/admin-user/admin-user.component.html
@@ -54,7 +54,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Activo </th>
             <td mat-cell *matCellDef="let element">
               <label class="switch switch-label switch-pill switch-outline-secondary" style="padding-top:8px;">
-                <input type="checkbox" class="switch-input" [checked]="!element.IsBlocked">
+                <input type="checkbox" class="switch-input" [checked]="!element.IsBlocked" (change)="changed($event, element.Id)">
                 <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
               </label>
             </td>
