--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -8,73 +8,71 @@
 <div class="animated fadeIn">
   <div class="card">
     <div class="card-body">
-
-      <div class="row mb-3">
-        <div class="col-lg-10 mb-1">
-          <div class="row">
-            <div class="col-lg-3 mb-1">
-              <mat-form-field class="input-full-width">
-                <input matInput type="text" class="" [(ngModel)]="filterQuery" placeholder="Guía Master" />
-              </mat-form-field>
-            </div>
-            <div class="col-lg-3 mb-1">
-              <mat-form-field class="input-full-width">
-                <input matInput type="text" class="" [(ngModel)]="filterQuery" placeholder="Guía House" />
-              </mat-form-field>
-            </div>
-            <div class="col-lg-3 mb-1">
-              <mat-form-field class="input-full-width">
-                <input matInput type="text" class="" [(ngModel)]="filterQuery" placeholder="ID Adelanto Salida" />
-              </mat-form-field>
-            </div>
-            <div class="col-lg-3 mb-1">
-              <div class="input-group">
+      <form #formbuscar_salida="ngForm">
+        <div class="row mb-3">
+          <div class="col-lg-10 mb-1">
+            <div class="row">
+              <div class="col-lg-3 mb-1">
                 <mat-form-field class="input-full-width">
-                  <input matInput class="" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="bsRangeValue" placeholder="Rango de Fecha">
-                  <!-- <mat-icon matSuffix>date_range</mat-icon> -->
+                  <input matInput type="text" id="master" #master="ngModel" [(ngModel)]="salidas.Master"  name="master" placeholder="Guía Master" required />
+                  <mat-error *ngIf="master.dirty || master.pristine">
+                    El campo Master es solicitado es <strong>requerido</strong>
+                  </mat-error>
+                </mat-form-field>
+              </div>
+              <div class="col-lg-3 mb-1">
+                <mat-form-field class="input-full-width">
+                  <input matInput type="text" [(ngModel)]="salidas.House" placeholder="Guía House" />
+                </mat-form-field>
+              </div>
+              <div class="col-lg-3 mb-1">
+                <mat-form-field class="input-full-width">
+                  <input matInput type="text" [(ngModel)]="salidas.IdAdelantoSalidas" placeholder="ID Adelanto Salida" />
+                </mat-form-field>
+              </div>
+              <div class="col-lg-3 mb-1">
+                <div class="input-group">
+                  <mat-form-field class="input-full-width">
+                    <input matInput #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="salidas.House" placeholder="Rango de Fecha">
+                    <!-- <mat-icon matSuffix>date_range</mat-icon> -->
+                  </mat-form-field>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <button class="btn btn-pill btn-primary" (click)="formbuscar_salida.valid ? buscar_salida() : validar_campos(formbuscar_salida._directives)"> <i class="fas fa-search"></i> Buscar</button>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-lg-10">
+            <div class="row">
+              <div class="col-lg-3 mb-1">
+                <mat-form-field class="input-full-width">
+                  <input matInput type="text" [(ngModel)]="salidas.Referencia" placeholder="Referencia" />
+                </mat-form-field>
+              </div>
+              <div class="col-lg-3 mb-1">
+                <mat-form-field class="input-full-width">
+                  <mat-select id="estatus" #estatus="ngModel" [(ngModel)]="salidas.Estatus" name="estatus" placeholder="Estatus" #singleSelect required>
+                    <mat-option>
+                      <ngx-mat-select-search [(ngModel)]="estatusSearch" [placeholderLabel]="'Estatus'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
+                    </mat-option>
+                    <mat-option>Ninguno</mat-option>
+                    <mat-option *ngFor="let option of estatusCatalogo | filterSelect: estatusSearch" [value]="option.IdEstatus">
+                      {{option.Descripcion}}
+                    </mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="estatus.dirty || estatus.pristine">
+                    El campo Referencia es solicitado es <strong>requerido</strong>
+                  </mat-error>
                 </mat-form-field>
               </div>
             </div>
-
           </div>
         </div>
-        <div class="col-lg-2">
-          <button class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar</button>
-        </div>
-      </div>
-      <div class="row mb-3">
-        <div class="col-lg-10">
-          <div class="row">
-            <div class="col-lg-3 mb-1">
-              <mat-form-field class="input-full-width">
-                <input matInput type="text" class="" [(ngModel)]="filterQuery" placeholder="Referencia" />
-              </mat-form-field>
-            </div>
-            <div class="col-lg-3 mb-1">
-              <mat-form-field class="input-full-width">
-                <mat-select class="" placeholder="Estatus" #singleSelect>
-                  <mat-option>
-                    <ngx-mat-select-search [(ngModel)]="estatusSearch" [placeholderLabel]="'Estatus'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
-                  </mat-option>
-                  <mat-option>Ninguno</mat-option>
-                  <mat-option *ngFor="let option of estatusCatalogo | filterSelect: estatusSearch" [value]="option.IdEstatus">
-                    {{option.Descripcion}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row mb-3">
-        <div class="col-md-4 offset-md-8">
-          <mat-form-field class="input-full-width">
-            <input matInput (keyup)="applyFilter($event.target.value)" type="text" class="form-control" placeholder="Buscar..." />
-            <mat-icon matSuffix><i class="fa fa-search"></i></mat-icon>
-          </mat-form-field>
-        </div>
-      </div>
+      </form>
       <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
