--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -1,7 +1,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
 <div class="row justify-content-end">  
   <div class="col-lg-2">
-    <button (click)="myModal.show()" class="btn btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Previos</button>
+    <button (click)="openDialog()" class="btn btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Previos</button>
   </div>          
 </div>
 <div class="animated fadeIn">
@@ -241,220 +241,7 @@
       </div>
     </div>
   </div>
-  
-    <!-- Modals -->
-    <div bsModal #myModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4 class="modal-title">Nuevo Previo</h4>
-              <button type="button" class="close" (click)="myModal.hide()" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="row">
-                <div class="col-sm-6 col-md-12 col-lg-12">
-                  <div class="row">
-                    <div class="col-sm-6 col-md-6 col-lg-6">
-                      <div class="form-group">            
-                        <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía Master"/>
-                      </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-6">                      
-                      <div class="form-group">            
-                        <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía House"/>
-                      </div>      
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                        <div class="form-group">  
-                            <div class="row justify-content-center"> 
-                                <h1 style="font-size: 2rem"><i class="fas fa-plane-departure"></i></h1>
-                            </div>
-                            <div class="row justify-content-center">
-                                <button (click)="myModal2.show(); myModal.hide();" class="btn btn-pill btn-primary">Siguiente</button>
-                            </div>
-                        </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div><!-- /.modal-body -->         
-          </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-      </div><!-- /.modal -->
-  
-  
-    <div bsModal #myModal2="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModal2Label" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title">Nueva PreAlerta</h4>
-            <button type="button" class="close" (click)="myModal2.hide()" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">          
-            <div class="form-group">  
-              <div class="row mb-3">            
-                <div class="col-lg-4">
-                  <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Referencias"/>
-                </div>
-                <div class="col-lg-4">
-                  <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Piezas"/>
-                </div>
-                <div class="col-lg-4">
-                  <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Peso"/>
-                </div>              
-              </div>
-  
-              <div class="row mb-3">            
-                  <div class="col-lg-4">
-                    <div class="input-group">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fa fa-calendar"></i></span>
-                      </div>                    
-                      <input type="text" placeholder="Fecha Estimada de Arribo" class="form-control" #dp="bsDatepicker" bsDatepicker [(ngModel)]="bsValue2">
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div class="styled-select">
-                      <select class="form-control">
-                        <option value="" selected disabled hidden>Almacen de Origen</option>
-                        <option value="0">Opcion 0</option>
-                        <option value="1">Opcion 1</option>
-                        <option value="2">Opcion 2</option>
-                      </select>
-                    </div> 
-                  </div>
-                  <div class="col-lg-4">
-                    <div class="styled-select">
-                      <select class="form-control">
-                        <option value="" selected disabled hidden>Rango de Temperatura</option>
-                        <option value="0">Opcion 0</option>
-                        <option value="1">Opcion 1</option>
-                        <option value="2">Opcion 2</option>
-                      </select>
-                    </div> 
-                  </div>              
-                </div>
-  
-               <div class="row mb-3">            
-                <div class="col-lg-4">
-                  <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Consignatario a Facturar"/>
-                </div>
-                <div class="col-lg-4">
-                  <div class="styled-select">
-                      <select class="form-control">
-                        <option value="" selected disabled hidden>Método de pago</option>
-                        <option value="0">Opcion 0</option>
-                        <option value="1">Opcion 1</option>
-                        <option value="2">Opcion 2</option>
-                      </select>
-                    </div> 
-                </div>
-                <div class="col-lg-4">
-                  <div class="styled-select">
-                      <select class="form-control">
-                        <option value="" selected disabled hidden>Uso de CFDI</option>
-                        <option value="0">Opcion 0</option>
-                        <option value="1">Opcion 1</option>
-                        <option value="2">Opcion 2</option>
-                      </select>
-                    </div> 
-                </div>              
-              </div>
-  
-               <div class="row mb-3">            
-                <div class="col-lg-6">
-                  <div class="styled-select">
-                    <select class="form-control">
-                      <option value="" selected disabled hidden>Condiciones de Almacenes</option>
-                      <option value="0">Opcion 0</option>
-                      <option value="1">Opcion 1</option>
-                      <option value="2">Opcion 2</option>
-                    </select>
-                  </div> 
-                </div>
-                <div class="col-lg-6">                    
-                  <div class="form-control form-group form-check">
-                    <label for="consolidado" class="form-check-label">Consolidado</label>
-                    <label class="switch switch-pill switch-primary form-switch">                  
-                      <input id="consolidado" type="checkbox" class="switch-input" checked>
-                      <span class="switch-slider"></span>
-                    </label>
-                  </div>                
-                </div>                          
-              </div>
-  
-              <div class="row mb-3">
-                <div class="col-lg-12">
-                  <div class="styled-select">
-                    <select class="form-control">
-                      <option value="" selected disabled hidden>Instrucciones de Manejo</option>
-                      <option value="0">Recolección</option>
-                      <option value="1">Transferencia</option>
-                      <option value="2">Recolección y Transferencia</option>
-                    </select>
-                  </div> 
-                </div>            
-              </div>
-  
-              <div class="row mb-3">
-                <div class="col-lg-12">
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>            
-              </div>
-  
-              <div class="row justify-content-center">            
-                <button (click)="myModal3.show(); myModal2.hide();" class="btn btn-pill btn-primary">Siguiente</button>
-              </div>
-  
-            </div>                        
-          </div>         
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-  
-    <div bsModal #myModal3="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModal3Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4 class="modal-title">Nueva PreAlerta</h4>
-              <button type="button" class="close" (click)="myModal3.hide()" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>Subir documentos</p>
-              <div class="row mb-5">       
-                <div class="col-lg-2">
-                    <img width="100px" class="img-thumbnail" src="http://pngimages.net/sites/default/files/file-png-image-59234.png" alt="doc">              
-                </div>
-                <div class="col-lg-2">
-                    <img width="100px" class="img-thumbnail" src="http://pngimages.net/sites/default/files/file-png-image-59234.png" alt="doc">              
-                </div>
-                <div class="col-lg-2 align-self-center">
-                  <button class="btn btn-ghost-primary"> <i class="fas fa-plus-circle"></i></button>
-                </div>
-              </div>
-              <div class="form-group">  
-                <div class="row justify-content-center">
-                  <div class="col-lg-2">
-                    <button (click)="myModal3.hide(); myModal.show();" class="btn btn-pill btn-primary">Regresar</button>
-                  </div>
-                  <div class="col-lg-2">
-                    <button (click)="myModal3.hide();" class="btn btn-pill btn-primary">Siguiente</button>
-                  </div>
-                </div>
-              </div>                        
-            </div>         
-          </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-      </div><!-- /.modal -->
-  
+      
     <!-- Modal Detalle -->
       <div bsModal #detalleModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="detalleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-xl">
