--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -137,6 +137,22 @@ table{
     transform: translate(-50%, -50%);
 }
 
+// File X (remove) button
+.file__btn-close {
+    text-align: right;
+    font-size: 2rem;    
+    cursor:pointer;
+}
+
+// Input type="" Fixes
+.no-spinners {
+    -moz-appearance:textfield;
+} 
+.no-spinners::-webkit-outer-spin-button,
+.no-spinners::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 /*Select Input */
 .styled-select {
